added possible actions, and defaulting sizings

--- a/demo/demo/build.gradle
+++ b/demo/demo/build.gradle
@@ -18,6 +18,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.openjfx:javafx-controls:17'
+	implementation 'org.openjfx:javafx-base:17'
+
 }
 
 tasks.named('test') {
